# kemena3d

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  build_doc.py  build_sdk.py  build_sdk_freebsd.sh  build_sdk_linux.sh  build_sdk_mac.command  build_sdk_windows.bat  download_dep.py
Assets/: README.md
Assets/shader/glsl/: gizmo.frag  gizmo.vert  mesh.vert  mesh_pbr.frag  mesh_phong.frag  screen.frag  screen.vert  shadow.frag  shadow.vert
Demo/: README.md
Demo/1. Hello World/: CMakeLists.txt  README.md  main.cpp  reptile_mage.mtl
Dependencies/: README.md  download_dep.py  download_dep_freebsd.sh  download_dep_linux.sh  download_dep_mac.command  download_dep_windows.bat
Documentation/References/: README.md
Source/include/: kanimation.h  kanimator.h  kassetmanager.h  kaudio.h  kaudiomanager.h  kaudiosource.h  kbone.h  kcamera.h  kconfig.h  kdatatype.h  kdriver.h  kemena.h  kexport.h  kfont.h  kguimanager.h  klight.h  kmaterial.h  kmd5.h  kmesh.h  kmeshgenerator.h  knavagent.h  knavmanager.h  knavmesh.h  knavobstacle.h  kobject.h  koctree.h  koffscreenrenderer.h  kopengldriver.h  kparticle.h  kphysicsmanager.h  kphysicsobject.h  kprefab.h  krenderer.h  kscene.h  kscriptmanager.h  kshader.h  kshadernode.h  kskelanimation.h  ktexture.h  ktexture2d.h  (+4 more)
Source/include/kemena/: kanimator.h  kbone.h  kconfig.h  kfont.h  klight.h  kmaterial.h  ktexture.h  ktexturecube.h
Source/src/: kanimation.cpp  kanimator.cpp  kassetmanager.cpp  kaudio.cpp  kaudiomanager.cpp  kbone.cpp  kcamera.cpp  kemena.cpp  kfont.cpp  kguimanager.cpp  klight.cpp  kmaterial.cpp  kmesh.cpp  kmeshgenerator.cpp  knavagent.cpp  knavmanager.cpp  knavmesh.cpp  knavobstacle.cpp  kobject.cpp  koctree.cpp  koffscreenrenderer.cpp  kopengldriver.cpp  kparticle.cpp  kphysicsmanager.cpp  kphysicsobject.cpp  kprefab.cpp  krenderer.cpp  kscene.cpp  kscriptmanager.cpp  kshader.cpp  kshadernode.cpp  kskelanimation.cpp  ktexture.cpp  ktexture2d.cpp  ktexturecube.cpp  ktimer.cpp  kwindow.cpp  kworld.cpp
Source/src/kemena/: kscriptmanager.cpp  kshader.cpp  kworld.cpp
Tools/: README.md
